<resources xmlns:tools="http://schemas.android.com/tools">
    <string-array name="Languages">
        <item>English</item>
        <item>Vietnamese</item>
        <item>Zulu</item>
        <item>Afrikaans</item>
        <item>Arabic</item>
        <item>Bahasa+Indonesia</item>
        <item>Bahasa+Indonesian</item>
        <item>Bengali</item>
        <item>Bulgarian</item>
        <item>Cantonese</item>
        <item>Cantonese+Chinese</item>
        <item>Catalan</item>
        <item>Chinese</item>
        <item>Creole+of+Guadeloupe</item>
        <item>Croatian</item>
        <item>Czech</item>
        <item>Danish</item>
        <item>Dutch</item>
        <item>English%2FFrench</item>
        <item>English%2CSpanish</item>
        <item>Estonian</item>
        <item>Finnish</item>
        <item>French</item>
        <item>German</item>
        <item>Greek</item>
        <item>Hebrew</item>
        <item>Hindi</item>
        <item>Hungarian</item>
        <item>Icelandic</item>
        <item>Indonesian</item>
        <item>Kazakh</item>
        <item>Italian</item>
        <item>Japanese</item>
        <item>Korean</item>
        <item>Latvian</item>
        <item>Lithuanian</item>
        <item>Malay</item>
        <item>Maori</item>
        <item>Marathi</item>
        <item>Norwegian</item>
        <item>Persian</item>
        <item>Spanish</item>
        <item>Swedish</item>
        <item>Tagalog</item>
        <item>Turkish</item>
        <item>Ukrainian</item>
        <item>Telugu</item>
        <item>Thai</item>
        <item>Urdu</item>
        <item>Slovak</item>
        <item>Slovenian</item>
        <item>Tamil</item>
        <item>Romanian</item>
        <item>Russian</item>
        <item>Serbian-Croatian</item>
        <item>Polish</item>
        <item>Portuguese</item>
        <item>Portuguese%28Brazilian%29</item>
    </string-array>

    <string name="app_name">AudiobooksNZ</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="or" tools:ignore="ExtraTranslation"> or </string>
    <string name="bc" tools:ignore="ExtraTranslation">BC</string>
    <string name="addCart" tools:ignore="ExtraTranslation">Add to Cart For NZ$</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!--login_activity-->
    <string name="LoginFacebook">Login With Facebook</string>
    <string name="LoginGoogle">Login With Google</string>
    <string name="LoginEmail">Login With Email</string>
    <string name="DontHaveAcc">Don\'t have Account?</string>
    <string name="Or">OR</string>
    <string name="SignFree">Sign Up For Free!</string>
    <string name="SignPro">Sign Up 14 Days Free</string>
    <string name="UpgradePro">Upgrade To Subscription</string>
    <string name="Upgrade">Upgrade</string>
    <string name="Discover">Discover Audiobooks</string>

    <!--login_mail_activity-->
    <string name="E_mail_sign_in">Enter your email address</string>
    <string name="Password">Password</string>
    <string name="ForgotPass">Forgot Password?</string>
    <string name="Login">Login</string>
    <string name="ResetPassword">Reset Password</string>
    <string name="LostPasswordText">Lost your password? Please enter your username or email address. You will receive a link to create a new password via email.</string>

    <!--profile_activity-->
    <string name="BookCredit">Book Credits</string>
    <string name="BugReport">Submit Bug Report</string>
    <string name="Email_Customer_care">Email Customer Care</string>
    <string name="FAQ">FAQ</string>
    <string name="mylibrary">My Library</string>
    <string name="browse">Browse</string>
    <string name="more">More</string>
    <string name="me">Me</string>
    <string name="Signout">Sign Out</string>

    <!--SignUp_activity-->
    <string name="Firstname_SignUp">Enter Your First Name</string>
    <string name="Lastname_SignUp">Enter Your Last Name</string>
    <string name="Mail_SignUp">Enter Your Email</string>
    <string name="Password_SignUp">Enter Your Password</string>
    <string name="PasswordConfirm_SignUp">Enter Your Confirm Password</string>
    <string name="TermAndCondition_SignUp">By Ticking you accept AudioBooks NZ Terms and Conditions and Privacy Policy</string>
    <string name="SignUp">Sign Up</string>

    <!--Alert_Dialog-->
    <string name="AlertTitle">Alert!!</string>
    <string name="AlertDescription">Something Wrong</string>
    <string name="AlertOk">OK</string>
    <string name="AlertCancel">Cancel</string>
    <string name="PleaseSelectImage">Please Select Image</string>

    <!--edit_profile-->
    <string name="CurrentPass">Current Password</string>
    <string name="NewPass">New Password</string>
    <string name="ConfirmPass">Confirm Password</string>
    <string name="SaveChanges">Save Changes</string>

    <!--chromecast-->
    <string name="receiver_id">13B2E2B1</string>
    <string name="namespace">urn:x-cast:com.audiobookz.nz.app</string>

    <!--Facebook id-->
    <string name="facebook_app_id">336532167097984</string>
    <string name="fb_login_protocol_scheme">fb336532167097984</string>

    <!--deep link-->
    <string name="audiobooksnz_deep_link_scheme">audiobooksnz</string>


    <!--Featured_Browse-->
    <string name="Sale">Sale</string>
    <string name="NewZealand">New Zealand</string>
    <string name="NewReleases">New Releases</string>
    <string name="BestSellers">Best Sellers</string>
    <string name="showAll">Show All</string>

    <string name="remove">Remove</string>
    <string name="cart">Cart</string>
    <string name="Search">search</string>
    <string name="basket">View Basket</string>
    <string name="share">Share</string>
    <string name="save">Save</string>
    <string name="inputDetail">Input Information</string>

    <!--mylibrary-->
    <string name="searchLibrary">Search your book in your library</string>
    <string name="optionDetail">Book Details</string>
    <string name="optionReview">Rate &amp; Reviews</string>
    <string name="cloudLibrary">Cloud</string>
    <string name="deviceLibrary">Device</string>

    <!--player-->
    <string name="speed">Speed</string>
    <string name="chapter">Chapter</string>
    <string name="sleepTime">Sleep Time</string>
    <string name="bookMark">Bookmark</string>
    <string name="bookMarks">Bookmarks</string>
    <string name="viewDetail">View Details</string>
    <string name="narrationSpeed">Narration Speed</string>

    <!--bookmark-->
    <string name="createBookmark">Create a bookmark</string>
    <string name="addNote">Note</string>
    <string name="withoutNote">Without Note</string>
    <string name="delete">Delete</string>
    <string name="yourNoteUpdate">Your bookmark note has been added</string>
    <string name="submit">Submit</string>
    <string name="goTo">Go to bookmark</string>

    <!--Rating-->
    <string name="satisfaction">Satisfaction</string>
    <string name="narration">Narration</string>
    <string name="story">Story</string>
    <string name="rateThis">Rate this audiobook</string>

    <!--more-->
    <string name="addCredits">Add Credits</string>
    <string name="currentPlan">Current Plan</string>
    <string name="wishList">Wish List</string>
    <string name="addPaymentMethod">Add Payment Method</string>
    <string name="addCard">Add Card</string>
    <string name="listCard">Payment Methods</string>
    <string name="subscription">subscription</string>
    <string name="subscribe">Subscribe</string>
    <string name="blurb1">- Enjoy 14 days free, then pay only NZ$17.95 a month.</string>
    <string name="blurb2">- Your first audiobook is free (Receive 1 Book Credit).</string>
    <string name="blurb3">- Purchases made with books credits save you money!</string>
    <string name="blurb4">- Buy additional book credits at any time.</string>
    <string name="blurb5">- Cancel at any time.</string>

    <!--credit-->
    <string name="buyNow">Buy Now</string>
    <string name="noCredit">No. of Credits Required</string>
    <string name="runOutCredit">Run out of credits buy more at any time.</string>
    <string name="creditNote">Note: Only User with an active subscription can buy book credits</string>

    <!--coupon-->
    <string name="enterCoupon">Enter Coupon Code</string>
    <string name="subTotal">Subtotal</string>
    <string name="shopping">Continue Shopping</string>
    <string name="checkout">Proceed to Checkout</string>

    <!--order-->
    <string name="total">Total</string>
    <string name="product">Product</string>
    <string name="price">Price</string>
    <string name="proceedToPay">Proceed to Pay</string>

    <!--bookDetail-->
    <string name="searchByAuthor">Search by Author</string>
    <string name="searchByNarrator">Search by Narrator</string>

    <!--Current Plan-->
    <string name="cancelled">Cancelled</string>
    <string name="cancel">Cancel</string>
    <string name="planName">Plan Name</string>
    <string name="dateStart">Date Start</string>
    <string name="dateFinish">Date Finish</string>
    <string name="paypalAgreement">Paypal Agreement ID</string>
    <string name="status">Status</string>

</resources>
