<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/media_route_menu_item"
        android:title="Cast"
        app:actionProviderClass="androidx.mediarouter.app.MediaRouteActionProvider"
        app:showAsAction="always"
        tools:ignore="HardcodedText" />
    <item
        android:id="@+id/action_option_player"
        android:icon="@drawable/more_white_48dp"
        android:title=""
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/bookmarks"
                android:icon="@drawable/bookmarks_black_24dp"
                android:title="@string/bookMarks"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/viewDetails"
                android:icon="@drawable/info_black_24dp"
                android:title="@string/viewDetail"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/starReview"
                android:icon="@drawable/star_black_24dp"
                android:title="@string/optionReview"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/share"
                android:icon="@drawable/share_black_24dp"
                android:title="@string/share"
                app:showAsAction="ifRoom" />
        </menu>
    </item>

</menu>